// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccountDetails /> renders with lockup account 1`] = `
<div
  className="jsx-1225256684 account-info-container"
>
  <div
    className="row no-gutters"
  >
    <div
      className="col-md-4"
    >
      <div
        className="card-cell border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              <img
                className="jsx-1276427197 card-cell-title-img"
                src="/static/images/icon-m-transaction.svg"
              />
              Transactions
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              <span
                className="jsx-1225256684"
              >
                ↑
                7
              </span>
                
              <span
                className="jsx-1225256684"
              >
                ↓
                10
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-4"
    >
      <div
        className="card-cell  card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              <img
                className="jsx-1276427197 card-cell-title-img"
                src="/static/images/icon-storage.svg"
              />
              Storage Used
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              876 B
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-4"
    >
      <div
        className="card-cell  card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              <img
                className="jsx-1276427197 card-cell-title-img"
                src="/static/images/icon-m-transaction.svg"
              />
              Lockup Account
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              <a
                className="jsx-3150401870 account-link"
                href="/accounts/gjturigjgkjnfidsjffjsa.lockup.near"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                gjtur…jsa.lockup.near
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row no-gutters"
  >
    <div
      className="col-md-4"
    >
      <div
        className="card-cell border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              Ⓝ Native Account Balance
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                0.00065
                 Ⓝ
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-4"
    >
      <div
        className="card-cell  card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              Ⓝ Validator Stake
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                0
                 Ⓝ
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-4"
    >
      <div
        className="card-cell  card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              Ⓝ Aggregated Balance
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              <a
                className="jsx-3150401870 account-link"
                href="http://wallet/profile/megan.near"
                rel="noopener"
                target="_blank"
              >
                megan.near on Wallet
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="border-0 row no-gutters"
  >
    <div
      className="col-md-6"
    >
      <div
        className="card-cell block-card-created account-card-back border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              Created at
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              February 01, 2019 at 12:00:00am
              <a
                className="transaction-link"
                href="/transactions/EVvWW1S9BFaEjY1JBNSdstb7ZTtTFjQ6cygkbw1KY4tL"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <img
                  className="jsx-1225256684 transaction-link-icon"
                  src="/static/images/icon-m-copy.svg"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AccountDetails /> renders without lockup account 1`] = `
<div
  className="jsx-1225256684 account-info-container"
>
  <div
    className="row no-gutters"
  >
    <div
      className="col-md-4"
    >
      <div
        className="card-cell border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              <img
                className="jsx-1276427197 card-cell-title-img"
                src="/static/images/icon-m-transaction.svg"
              />
              Transactions
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              <span
                className="jsx-1225256684"
              >
                ↑
                7
              </span>
                
              <span
                className="jsx-1225256684"
              >
                ↓
                10
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-4"
    >
      <div
        className="card-cell  card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              <img
                className="jsx-1276427197 card-cell-title-img"
                src="/static/images/icon-storage.svg"
              />
              Storage Used
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              1876 B
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row no-gutters"
  >
    <div
      className="col-md-4"
    >
      <div
        className="card-cell border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              Ⓝ Native Account Balance
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                &lt;0.00001
                 Ⓝ
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-4"
    >
      <div
        className="card-cell  card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              Ⓝ Validator Stake
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                0
                 Ⓝ
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-4"
    >
      <div
        className="card-cell  card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              Ⓝ Aggregated Balance
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              <a
                className="jsx-3150401870 account-link"
                href="http://wallet/profile/near.near"
                rel="noopener"
                target="_blank"
              >
                near.near on Wallet
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="border-0 row no-gutters"
  >
    <div
      className="col-md-6"
    >
      <div
        className="card-cell block-card-created account-card-back border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              Created at
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              February 01, 2019 at 12:00:00am
              <a
                className="transaction-link"
                href="/transactions/EVvWW1S9BFlkjkmnjmkb7ZTtTFjQ6cygkbw1KY4tL"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <img
                  className="jsx-1225256684 transaction-link-icon"
                  src="/static/images/icon-m-copy.svg"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
